--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "html5-websocket": "^2.0.2",
     "isomorphic-fetch": "^2.2.1",
     "lodash.zipobject": "^4.1.3",
