--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ava": "^0.22.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.1",
-    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -35,8 +35,13 @@
     "rimraf": "^2.6.2"
   },
   "ava": {
-    "require": ["babel-register", "babel-polyfill"],
-    "files": ["test/index.js"],
+    "require": [
+      "babel-register",
+      "babel-polyfill"
+    ],
+    "files": [
+      "test/index.js"
+    ],
     "babel": "inherit"
   },
   "author": "Balthazar Gronon <bgronon@gmail.com>",
