--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "binance-api-react-native",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "A react native API wrapper for Binance",
   "main": "dist",
   "scripts": {
@@ -39,6 +39,10 @@
     "files": ["test/index.js"],
     "babel": "inherit"
   },
-  "author": "Balthazar Gronon <bgronon@gmail.com>",
+  "author": "Georgy Koychev <georgy.koychev@gmail.com>",
+  "repository": {
+  	"type": "git",
+  	"url": "https://github.com/gkoychev/binance-api-react-native"
+  },
   "license": "MIT"
 }
