--- a/package.json
+++ b/package.json
@@ -1,47 +1,56 @@
 {
   "name": "binance-api-react-native",
-  "version": "0.1.4",
+  "version": "0.9.17",
   "description": "A react native API wrapper for Binance",
   "main": "dist",
+  "files": [
+    "dist",
+    "index.d.ts"
+  ],
   "scripts": {
-    "build": "rimraf dist && babel src -d dist",
-    "test": "ava",
+    "build": "rm -rf dist && babel src -d dist",
+    "prepare": "yarn build",
+    "test": "ava --timeout=10s -v",
     "cover": "nyc ava",
-    "report": "npm run cover && nyc report --reporter=text-lcov | coveralls",
+    "report": "yarn cover && nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint src"
   },
   "dependencies": {
-    "crypto-js": "^3.1.9-1",
-    "html5-websocket": "^2.0.2",
+	"crypto-js": "^3.1.9-1",
     "lodash.zipobject": "^4.1.3",
-    "reconnecting-websocket": "^3.2.2"
+    "reconnecting-websocket": "^4.2.0",
+    "ws": "^7.2.0"
   },
   "devDependencies": {
-    "ava": "^0.22.0",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-plugin-module-resolver": "^3.1.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "coveralls": "^3.0.0",
-    "dotenv": "^4.0.0",
-    "eslint": "^4.9.0",
-    "eslint-config-prettier": "^2.6.0",
-    "eslint-config-zavatta": "^6.0.1",
-    "nyc": "^11.2.1",
-    "prettier": "^1.7.4",
-    "rimraf": "^2.6.2"
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/register": "^7.7.4",
+    "ava": "^2.4.0",
+    "babel-eslint": "^10.0.3",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "coveralls": "^3.0.9",
+    "dotenv": "^8.2.0",
+    "eslint": "^6.7.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-zavatta": "^6.0.3",
+    "nyc": "^14.1.1",
+    "prettier": "^1.19.1"
+  },
+  "engines": {
+    "yarn": ">= 1.0.0"
   },
   "ava": {
-    "require": ["babel-register", "babel-polyfill"],
-    "files": ["test/index.js"],
-    "babel": "inherit"
+    "require": [
+      "@babel/register",
+      "@babel/polyfill"
+    ],
+    "files": [
+      "test/**/*",
+      "!test/utils.js"
+    ]
   },
-  "author": "Georgy Koychev <georgy.koychev@gmail.com>",
-  "repository": {
-  	"type": "git",
-  	"url": "https://github.com/gkoychev/binance-api-react-native"
-  },
+  "author": "Balthazar Gronon <bgronon@gmail.com>",
   "license": "MIT"
 }
