--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "binance-api-react-native",
+  "name": "ltt-binance-api-react-native",
   "version": "0.9.17",
   "description": "A react native API wrapper for Binance",
   "main": "dist",
@@ -16,7 +16,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
-	"crypto-js": "^3.1.9-1",
+    "crypto-js": "^3.1.9-1",
     "lodash.zipobject": "^4.1.3",
     "reconnecting-websocket": "^4.2.0",
     "ws": "^7.2.0"
@@ -51,6 +51,10 @@
       "!test/utils.js"
     ]
   },
-  "author": "Balthazar Gronon <bgronon@gmail.com>",
+  "author": "Thank Ton <lethanhtan195@gmail.com>",
+  "repository": {
+  	"type": "git",
+  	"url": "https://github.com/LayThankTon/binance-api-react-native"
+  },
   "license": "MIT"
 }
