--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ltt-binance-api-react-native",
-  "version": "0.9.20",
+  "version": "0.9.24",
   "description": "A react native API wrapper for Binance",
   "main": "dist",
   "files": [
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
+    "isomorphic-fetch": "^2.2.1",
     "lodash.zipobject": "^4.1.3",
     "reconnecting-websocket": "^4.2.0",
     "ws": "^7.2.0"
