--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "crypto-js": "^3.1.9-1",
     "isomorphic-fetch": "^2.2.1",
     "lodash.zipobject": "^4.1.3",
-    "reconnecting-websocket": "^4.2.0",
-    "ws": "^7.2.0"
+    "react-native-reconnecting-websocket": "^1.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
